Fix minor misalignment in the upload UI

--- a/src/style.css
+++ b/src/style.css
@@ -203,7 +203,7 @@ html {
     line-height: 26px;
     position: absolute;
     text-align: center;
-    top: 47px;
+    top: 45px;
     width: 100%;
     z-index: 1;
 }
